--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 	"license": "ISC",
 	"dependencies": {
 		"nodemailer": "^6.10.0",
-		"puppeteer": "^13.0.1"
+		"puppeteer": "^24.4.0",
+		"puppeteer-extra": "^3.3.6",
+		"puppeteer-extra-plugin-stealth": "^2.11.2"
 	}
 }
